[project]
name = "py_jwt_cpp"
requires-python = ">=3.8"
version = "0.1.0"

[tool.poetry]
name = "py_jwt_cpp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pybind11 = "^2.13.6"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "pybind11", "setuptools"]
build-backend = "poetry.core.masonry.api"
