[project]
name = "py_jwt_cpp"
requires-python = ">=3.8"
version = "0.1.0"
authors = ["Yanghsing Lin <yanghsingl@netskope.com>"]
maintainers = ["Yanghsing Lin <yanghsingl@netskope.com>"]

[tool.poetry]
name = "py_jwt_cpp"
version = "0.1.0"
description = ""
authors = ["Yanghsing Lin <yanghsingl@netskope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pybind11 = "^2.13.6"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "pybind11", "setuptools"]
build-backend = "poetry.core.masonry.api"
